# CoconutCat_Optimizer

./: CMakeLists.txt  Optimizer_Leveberg_Marquardt.h  README.md  linearSolver_SparseCholesky.h  main.cpp  simple_optimizer_Leveberg_Marquardt.h  utilis.h  variables.h
not used/: LMM.h  factor.h  linearSolver.h  linearSolver_Cholesky.h  problem.h
source/: CMakeLists.txt  linearSolver_SparseCholesky.cpp  linearSolver_SparseCholesky.h  settings.h  simple_optimizer_Leveberg_Marquardt.cpp  simple_optimizer_Leveberg_Marquardt.h  simple_optimizer_Levenberg_Marquardt.h  utilis.h
